--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -16,6 +16,8 @@
     <description>backend</description>
     <properties>
         <java.version>17</java.version>
+        <sonar.organization>ankestein</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
     <dependencies>
         <dependency>
