--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -40,6 +40,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+            <version>2.5.0</version>
+        </dependency>
     </dependencies>
 
     <build>
