--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
 		"@testing-library/jest-dom": "^5.15.0",
 		"@testing-library/react": "^11.2.7",
 		"@testing-library/user-event": "^12.8.3",
+		"axios": "^0.24.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-scripts": "4.0.3",
@@ -37,5 +38,6 @@
 	},
 	"devDependencies": {
 		"prettier": "2.4.1"
-	}
+	},
+	"proxy": "http://localhost:8080"
 }
