--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,5 +18,9 @@ jobs:
         java-version: '17'
         distribution: 'adopt'
         cache: maven
+    - name: Start MongoDB
+      uses: supercharge/mongodb-github-action@1.6.0
+      with:
+        mongodb-version: '5.0'
     - name: Build with Maven
       run: mvn -B package --file backend/pom.xml
