--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
 		"@testing-library/react": "^11.2.7",
 		"@testing-library/user-event": "^12.8.3",
 		"axios": "^0.24.0",
+		"date-fns": "^2.25.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-router-dom": "^5.3.0",
@@ -43,6 +44,7 @@
 		]
 	},
 	"devDependencies": {
+		"@mui/lab": "^5.0.0-alpha.54",
 		"prettier": "2.4.1"
 	},
 	"proxy": "http://localhost:8080"
