--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
 		"@testing-library/user-event": "^12.8.3",
 		"axios": "^0.24.0",
 		"date-fns": "^2.25.0",
+		"moment": "^2.29.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-router-dom": "^5.3.0",
