--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
 		"@emotion/styled": "^11.3.0",
 		"@mui/icons-material": "^5.0.5",
 		"@mui/material": "^5.0.6",
+		"@mui/x-data-grid": "^5.0.0-beta.7",
 		"@testing-library/jest-dom": "^5.15.0",
 		"@testing-library/react": "^11.2.7",
 		"@testing-library/user-event": "^12.8.3",
