--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -45,6 +45,12 @@
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
             <version>2.5.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-inline</artifactId>
+            <version>3.8.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
