--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,7 +47,8 @@
 		]
 	},
 	"devDependencies": {
-		"prettier": "2.4.1"
+		"prettier": "2.4.1",
+		"prop-types": "^15.7.2"
 	},
 	"proxy": "http://localhost:8080"
 }
