--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,9 +47,7 @@
 		]
 	},
 	"devDependencies": {
-		"@material-ui/core": "^4.12.3",
-		"prettier": "2.4.1",
-		"prop-types": "^15.7.2"
+		"prettier": "2.4.1"
 	},
 	"proxy": "http://localhost:8080"
 }
