--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -46,6 +46,10 @@
             <version>2.5.0</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-inline</artifactId>
             <version>3.8.0</version>
