--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,9 @@
 		"@date-io/moment": "^2.11.0",
 		"@emotion/react": "^11.5.0",
 		"@emotion/styled": "^11.3.0",
+		"@fortawesome/fontawesome-svg-core": "^1.2.36",
+		"@fortawesome/free-solid-svg-icons": "^5.15.4",
+		"@fortawesome/react-fontawesome": "^0.1.16",
 		"@material-ui/core": "^4.12.3",
 		"@mui/icons-material": "^5.0.5",
 		"@mui/lab": "^5.0.0-alpha.54",
